# KeyboardNinja

./: .clang-format  .travis.yml  CMakeLists.txt  Game.cpp  Game.h  Makefile  README.md  Texts.cpp  Texts.h  main.cpp  text.txt
.github/workflows/: main.yml
src/: Game.cpp  Game.h  Texts.cpp  Texts.h  main.cpp
tests/: CMakeLists.txt  testGameClass.cpp
tests/lib/: .gitignore
tests/lib/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md
tests/lib/docs/reference/: matchers.md
tests/lib/googlemock/include/gmock/: gmock-cardinalities.h  gmock-matchers.h  gmock-spec-builders.h
tests/lib/googlemock/src/: gmock-cardinalities.cc  gmock-spec-builders.cc  gmock.cc
tests/lib/googlemock/test/: gmock_output_test_golden.txt
tests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest.h
tests/lib/googletest/include/gtest/internal/: gtest-internal.h
tests/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
